fix: JDK17-unsafe Thread.threadId() in QueryEngineManagerPoolTest
Introduced by cherry-picked commit 99d62c2f4 (fix stop
QueryEngineManagerPoolTest deadlocking the shared query pool).
Thread.threadId() is a JDK21 API not available under java17 --release
compilation; replace with getId().